# MGraph-AI__UI__Html-Transformation-Workbench

./: README.md  pyproject.toml  requirements-test.txt
.github/workflows/: ci-pipeline.yml  ci-pipeline__main.yml
.issues/: _index.json
.issues/config/: link-types.json  node-types.json
.issues/data/bug/: _index.json
docs/dev-briefs/: files.json  index.md
docs/dev-briefs/issues/: issue-001.json  issue-002.json  issue-003.json  issue-004.json  issue-005.json  issue-006.json  issue-007.json  issue-008.json  issue-009.json  issue-010.json  issues.json  labels.json
docs/dev-briefs/v0.1.1__create__workbench-architecture-and-stories/: part-1__LLM_BRIEF__HTML_Transformation_Workbench_UI.md  part-2__ARCHITECTURE__HTML_Transformation_Workbench.md  part-3__STORY_INDEX.md  part-3__Stories__SHARED_BRIEFING.md
docs/dev-briefs/v0.1.2__implement-workbench-using-claude-code/: v0.1.2__brief__claude-code-orchestrator-briefing.md
docs/dev-briefs/v0.2.15__brief__refactor-issues-ui/: v0.2.15__brief__refactor-issues-ui-to-standalone.md
docs/dev-briefs/v0.2.1__add__issue-tracking-system/: v0.2.1__dev-brief-issue-tracking-system.md
docs/dev-briefs/v0.2.2__backend__issue-tracking-api/: v0.2.2__backend-brief__issue-tracking-api.md
docs/dev-briefs/v0.2.4__brief__create-graph-based-issue-tracking-system/: v0.2.13__debrief__phase-1__graph-implementation.md  v0.2.14__brief__issues-tracking-system__frontend-llm-instructions.md  v0.2.14__brief__phases-2-to-5-implementation.md  v0.2.4__brief__graph-based-issue-tracking.md  v0.2.4__brief__memory-fs-integration.md
mgraph_ai_ui_html_transformation_workbench/: __init__.py  config.py
mgraph_ai_ui_html_transformation_workbench/fast_api/: Html_Transformation_Workbench__Fast_API.py  lambda_handler.py
mgraph_ai_ui_html_transformation_workbench/fast_api/routes/: Routes__Issues.py  Routes__Labels.py  (+3 more)
mgraph_ai_ui_html_transformation_workbench/service/: __init__.py
mgraph_ai_ui_html_transformation_workbench/utils/: Version.py
mgraph_ai_ui_html_transformation_workbench__ui/: __init__.py
mgraph_ai_ui_html_transformation_workbench__ui/chrome-llm/: README.md  index.html  manifest.json  styles.css
scripts/: run-locally.sh
tests/deploy_aws/: test_Deploy__Service__base.py  test_Deploy__Service__to__dev.py
workbench/v0.1.0/: index.html
(+166 files in other folders)
