[tool.poetry]
name        = "mgraph-ai-ui-html-transformation-workbench"
version     = "v0.2.5"
description = "UI for MGraphAI's Html Transformation Workbench"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "MIT"
readme      = "README.md"
homepage    = "https://github.com/the-cyber-boardroom/MGraph-AI__UI__Html-Transformation-Workbench"
repository  = "https://github.com/the-cyber-boardroom/MGraph-AI__UI__Html-Transformation-Workbench"

[tool.poetry.dependencies]
python = "^3.12"
osbot-fast-api-serverless      = "*"

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"