[tool.poetry]
name        = "mgraph-ai-ui-html-transformation-workbench"
version     = "v0.2.10"
description = "UI for MGraphAI's Html Transformation Workbench"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "MIT"
readme      = "README.md"
homepage    = "https://github.com/the-cyber-boardroom/MGraph-AI__UI__Html-Transformation-Workbench"
repository  = "https://github.com/the-cyber-boardroom/MGraph-AI__UI__Html-Transformation-Workbench"

packages    = [
    { include = "mgraph_ai_ui_html_transformation_workbench"            },
    { include = "mgraph_ai_ui_html_transformation_workbench__ui" }
]

[tool.poetry.dependencies]
python = "^3.12"
osbot-fast-api-serverless      = "*"
memory_fs                      = "*"

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"